<resources>
    <string name="app_name">HelpingHands</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">228613244167748</string>
    <string name="submit_form">Submit</string>
    <string name="next">Next</string>
    <string name="form_heading">Child Details</string>
    <string name="enter_otp">_ _ _ _ _</string>
    <string name="confirm_otp">CONFIRM</string>
    <string name="title_activity_information_tabs">InformationTabsActivity</string>
    <string name="title_activity_student_details">StudentDetails</string>
    <string name="title_activity_orphanage_details">OrphanageDetails</string>
    <string name="add_new_orphanage"><U>Not in list</U></string>
    <string name="orphanage_name">Orphanage Name</string>
    <string name="orphanage_address_L1">Address Line1</string>
    <string name="orphanage_address_L2">Address Line2</string>
    <string name="phone_number">Contact No.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="pincode">Pincode</string>
    <string name="verify_internet">Please verify the internet connection</string>
    <string name="re_enter_otp">Wrong otp</string>
    <string name="enter_correct_password">please enter correct password</string>
    <string name="address">Address</string>
    <string name="strength">Strength</string>
    <string name="contact">Contact no</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="orphanage">Orphanage</string>
    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
