<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:hint="@string/orphanage_name"
        android:layout_margin="5dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/orphanage_address_L1"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/orphanage_address_L2"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/phone_number"
        android:layout_margin="5dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">

    <Button
    android:id="@+id/dialogButtonSave"
    android:layout_width="100px"
    android:layout_height="wrap_content"
    android:text="@string/save"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/dialogButtonCancel" />
</LinearLayout>

</LinearLayout>
